增加开启服务 跳转后可finish原页面 可跳转系统页面

--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -1,12 +1,4 @@
 apply plugin: 'java'
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
-
-ext {
-    GROUP = 'com.chenenyu.router'
-    ARTIFACT = 'annotation'
-    VERSION = ANNOTATION_VERSION
-}
-
-apply from: '../gradle/publish.gradle'
+apply plugin: 'maven-publish'
+apply plugin: 'com.github.dcendents.android-maven'
