--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+apply from: "config.gradle"
+
 buildscript {
     ext.kotlin_version = '1.5.31'
     repositories {
@@ -6,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         if (Boolean.valueOf(applyRemotePlugin)) {
             classpath "com.chenenyu.router:gradle-plugin:${PLUGIN_VERSION}"
