--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,2 @@
 // core
-include ':router', ':compiler', ':annotation', ':gradle-plugin'
-// demo
-include ':app', ':module1', ':module2'
-project(':app').projectDir = new File("Sample/app")
-project(':module1').projectDir = new File("Sample/module1")
-project(':module2').projectDir = new File("Sample/module2")
+include ':router', ':compiler', ':annotation'
