优化拦截器

--- a/routerapp/src/main/AndroidManifest.xml
+++ b/routerapp/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     android:supportsRtl="true"
     android:theme="@style/Theme.Router">
     <activity android:name=".ui.HomeActivity"></activity>
+    <activity android:name=".ui.InterceptorActivity"></activity>
     <activity
       android:name=".MainActivity"
       android:label="@string/app_name">
